tests/errors/test_19.x
// Missing return statement

fn foo(x: int) -> int {

}

fn main() -> int {
    foo(2);
}